[gd_scene load_steps=24 format=2]

[ext_resource path="res://resources/in_game.theme" type="Theme" id=1]
[ext_resource path="res://scripts/ScoreTable.gd" type="Script" id=2]
[ext_resource path="res://assets/images/UI/medal_flat_on.png" type="Texture" id=3]
[ext_resource path="res://assets/images/UI/medal_flat_off.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/touck2.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/hit.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/tling.ogg" type="AudioStream" id=7]
[ext_resource path="res://resources/shiny.gdshader" type="Shader" id=8]
[ext_resource path="res://scenes/UI/LoadingAnimation.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/fonts/RacingSansOne-Regular.ttf" type="DynamicFontData" id=10]

[sub_resource type="ShaderMaterial" id=13]
shader = ExtResource( 8 )
shader_param/shininess = 2.0
shader_param/shiny_color = Plane( 1, 1, 1, 0.5 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="ShaderMaterial" id=12]
shader = ExtResource( 8 )
shader_param/shininess = 2.0
shader_param/shiny_color = Plane( 1, 1, 1, 0.95 )

[sub_resource type="DynamicFont" id=14]
size = 26
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxFlat" id=15]
content_margin_left = 12.0
content_margin_right = 12.0
bg_color = Color( 0.2925, 0.544125, 0.75, 1 )
border_width_right = 2
border_width_bottom = 7
border_color = Color( 0.2535, 0.471575, 0.65, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 3
corner_radius_bottom_right = 12
corner_radius_bottom_left = 3
corner_detail = 1

[sub_resource type="StyleBoxFlat" id=16]
content_margin_left = 12.0
content_margin_right = 12.0
bg_color = Color( 0.1677, 0.311965, 0.43, 1 )
border_width_right = 2
border_width_bottom = 7
border_color = Color( 0.141176, 0.258824, 0.360784, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 3
corner_radius_bottom_right = 12
corner_radius_bottom_left = 3
corner_detail = 1

[sub_resource type="StyleBoxFlat" id=17]
content_margin_left = 12.0
content_margin_right = 12.0
bg_color = Color( 0.377, 0.52715, 0.65, 1 )
border_width_bottom = 7
border_color = Color( 0.3074, 0.42983, 0.53, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 3
corner_radius_bottom_right = 12
corner_radius_bottom_left = 3
corner_detail = 1

[sub_resource type="StyleBoxFlat" id=18]
content_margin_left = 12.0
content_margin_right = 12.0
bg_color = Color( 0.2535, 0.471575, 0.65, 1 )
border_width_bottom = 7
border_color = Color( 0.2262, 0.42079, 0.58, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 3
corner_radius_bottom_right = 12
corner_radius_bottom_left = 3
corner_detail = 1

[node name="ScoreTable" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="DataLabelTemplate" type="VBoxContainer" parent="."]
visible = false
margin_left = 588.0
margin_top = 254.0
margin_right = 778.0
margin_bottom = 513.0
custom_constants/separation = 5

[node name="Normal" type="Label" parent="DataLabelTemplate"]
margin_right = 190.0
margin_bottom = 61.0
text = "0:25.2"

[node name="LocalBest" type="Label" parent="DataLabelTemplate"]
modulate = Color( 0.74902, 0.870588, 1, 1 )
margin_top = 66.0
margin_right = 190.0
margin_bottom = 127.0
text = "0:25.1"

[node name="GlobalBest" type="Label" parent="DataLabelTemplate"]
modulate = Color( 0.839216, 0.643137, 1, 1 )
margin_top = 132.0
margin_right = 190.0
margin_bottom = 193.0
text = "0:25.3"

[node name="MedalContainer" type="HBoxContainer" parent="DataLabelTemplate"]
margin_top = 198.0
margin_right = 190.0
margin_bottom = 259.0

[node name="BronzeCheckBox" type="CheckBox" parent="DataLabelTemplate/MedalContainer"]
modulate = Color( 0.662745, 0.517647, 0.290196, 1 )
material = SubResource( 13 )
margin_right = 40.0
margin_bottom = 61.0
custom_icons/checked_disabled = ExtResource( 3 )
custom_icons/unchecked_disabled = ExtResource( 4 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 5 )
custom_styles/hover_pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
disabled = true
pressed = true

[node name="SilverCheckBox" type="CheckBox" parent="DataLabelTemplate/MedalContainer"]
modulate = Color( 0.729412, 0.733333, 0.741176, 1 )
material = SubResource( 13 )
margin_left = 50.0
margin_right = 90.0
margin_bottom = 61.0
custom_icons/checked_disabled = ExtResource( 3 )
custom_icons/unchecked_disabled = ExtResource( 4 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 5 )
custom_styles/hover_pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
disabled = true
pressed = true

[node name="GoldCheckBox" type="CheckBox" parent="DataLabelTemplate/MedalContainer"]
modulate = Color( 1, 0.878431, 0.490196, 1 )
material = SubResource( 13 )
margin_left = 100.0
margin_right = 140.0
margin_bottom = 61.0
custom_icons/checked_disabled = ExtResource( 3 )
custom_icons/unchecked_disabled = ExtResource( 4 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 5 )
custom_styles/hover_pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
disabled = true
pressed = true

[node name="AuthorCheckBox" type="CheckBox" parent="DataLabelTemplate/MedalContainer"]
modulate = Color( 0.286275, 0.803922, 0.941176, 1 )
material = SubResource( 13 )
margin_left = 150.0
margin_right = 190.0
margin_bottom = 61.0
custom_icons/checked_disabled = ExtResource( 3 )
custom_icons/unchecked_disabled = ExtResource( 4 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 5 )
custom_styles/hover_pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
disabled = true
pressed = true

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 425.0
margin_top = 155.0
margin_right = 940.0
margin_bottom = 612.0
columns = 2

[node name="RowNameEmpty" type="Control" parent="GridContainer"]
margin_right = 260.0
margin_bottom = 61.0

[node name="DataNameLabel" type="Label" parent="GridContainer"]
margin_left = 285.0
margin_right = 515.0
margin_bottom = 61.0
text = "PlayerOne"

[node name="RowLapsLabel" type="Label" parent="GridContainer"]
modulate = Color( 1, 1, 1, 0.752941 )
margin_top = 66.0
margin_right = 260.0
margin_bottom = 127.0
size_flags_vertical = 1
text = "Laps"
align = 2

[node name="DataLapsVBox" type="VBoxContainer" parent="GridContainer"]
margin_left = 285.0
margin_top = 66.0
margin_right = 515.0
margin_bottom = 127.0
custom_constants/separation = 0

[node name="RowBestLapLabel" type="Label" parent="GridContainer"]
modulate = Color( 1, 1, 1, 0.752941 )
margin_top = 132.0
margin_right = 260.0
margin_bottom = 193.0
text = "Best lap"
align = 2

[node name="DataBestLapBox" type="VBoxContainer" parent="GridContainer"]
margin_left = 285.0
margin_top = 132.0
margin_right = 515.0
margin_bottom = 193.0
custom_constants/separation = 5

[node name="RowRaceTimeLabel" type="Label" parent="GridContainer"]
modulate = Color( 1, 1, 1, 0.752941 )
margin_top = 198.0
margin_right = 260.0
margin_bottom = 259.0
text = "Race Time"
align = 2

[node name="DataRaceTimeBox" type="VBoxContainer" parent="GridContainer"]
margin_left = 285.0
margin_top = 198.0
margin_right = 515.0
margin_bottom = 259.0
custom_constants/separation = 5

[node name="RowRankLabel" type="Label" parent="GridContainer"]
modulate = Color( 1, 1, 1, 0.752941 )
margin_top = 264.0
margin_right = 260.0
margin_bottom = 325.0
text = "Rank"
align = 2

[node name="DataRankLabel" type="Label" parent="GridContainer"]
modulate = Color( 1, 0.878431, 0.490196, 1 )
material = SubResource( 12 )
margin_left = 285.0
margin_top = 264.0
margin_right = 515.0
margin_bottom = 325.0
text = "1st"

[node name="RowMedalsLabel" type="Label" parent="GridContainer"]
modulate = Color( 1, 1, 1, 0.752941 )
margin_top = 330.0
margin_right = 260.0
margin_bottom = 391.0
text = "Medals"
align = 2

[node name="DataMedalsBox" type="HBoxContainer" parent="GridContainer"]
modulate = Color( 1, 1, 1, 0.752941 )
margin_left = 285.0
margin_top = 330.0
margin_right = 515.0
margin_bottom = 391.0

[node name="RowLeaderboardLabel" type="Label" parent="GridContainer"]
modulate = Color( 1, 1, 1, 0.752941 )
margin_top = 396.0
margin_right = 260.0
margin_bottom = 457.0
text = "World Rank"
align = 2

[node name="DataLeaderboardBox" type="VBoxContainer" parent="GridContainer"]
margin_left = 285.0
margin_top = 396.0
margin_right = 515.0
margin_bottom = 457.0
custom_constants/separation = 5
alignment = 1

[node name="LoadingAnimation" parent="GridContainer/DataLeaderboardBox" instance=ExtResource( 9 )]
visible = false
margin_top = 10.0
margin_right = 230.0
margin_bottom = 50.0

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer/DataLeaderboardBox"]
margin_right = 230.0
margin_bottom = 61.0

[node name="DataLeaderboardLabel" type="Label" parent="GridContainer/DataLeaderboardBox/HBoxContainer"]
modulate = Color( 0.509804, 0.756863, 0.960784, 1 )
material = SubResource( 12 )
margin_right = 111.0
margin_bottom = 61.0
size_flags_horizontal = 3
text = "1st"

[node name="SubmitButton" type="Button" parent="GridContainer/DataLeaderboardBox/HBoxContainer"]
margin_left = 121.0
margin_right = 230.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 14 )
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/disabled = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
text = "Submit"

[node name="TickAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -3.0
bus = "UI"

[node name="HitAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "UI"

[node name="TlingAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "UI"
